--- a/index.html
+++ b/index.html
@@ -22,9 +22,68 @@
 		  <hr >
 		  <b>常见分类：</b><br><br>
 		  <table border="1px" cellspacing="0">
+			  <tr>
+				  <td>壁纸头像</td>
+				  <td>财经</td>
+				  <td>宠物</td>
+				  <td>电视剧</td>
+				  <td>电影</td>
+				  <td>动漫</td>
+				  <td>房产</td>
+				  <td>搞笑</td>
+				  </tr>
+			  <tr>
+				  <td>广告创意</td>
+				  <td>纪录片</td>
+				  <td>健康</td>
+				  <td>教育</td>
+				  <td>军事</td>
+				  <td>科技</td>
+				  <td>科学</td>
+				  <td>历史</td>
+				</tr>
+			  <tr>
+				  <td>旅游</td>
+				  <td>美女</td>
+				  <td>美食</td>
+				  <td>其他</td>
+				  <td>情感</td>
+				  <td>曲艺</td>
+				  <td>三农</td>
+				  <td>摄影</td>
+				  </tr>
+			  <tr>
+				  <td>社会</td>
+				  <td>生活</td>
+				  <td>时尚</td>
+				  <td>时事</td>
+				  <td>体育</td>
+				  <td>天气文章过滤</td>
+				  <td>网红达人</td>
+				  <td>文化</td>
+				  </tr>
+			  <tr>
+				  <td>心灵鸡汤</td>
+				  <td>星座命理</td>
+				  <td>音乐</td>
+				  <td>游戏</td>
+				  <td>娱乐</td>
+				  <td>职场</td>
+				  <td>综艺/td>
+				  <td>小说</td>
+				  <td>汽车</td>  
+			  </tr>
+			  <tr>
+				<td>壁纸头像</td>
+				<td>壁纸头像</td>
+			</tr>
 		  	<tr>
 				<td>财经：</td>
 				<td>融资、股份等。</td>
+			</tr>
+			  <tr>
+				<td>宠物</td>
+				<td>就是宠物。</td>
 			</tr>
 			<tr>
 				<td>科技：</td>
@@ -32,12 +91,33 @@
 			</tr>
 			<tr>
 				<td>电影：</td>
-				<td>电影/电视剧名或者电影/电视剧中的人物。</td>
+				<td>电影名或者电影中人物的名字。</td>
+			</tr>
+			  <tr>
+				<td>电视剧：</td>
+				<td>电视剧名字或者电视剧中人物的名字。</td>
+			</tr>
+			  <tr>
+				<td>动漫：</td>
+				<td>动漫中的人物或者动漫名。</td>
+			</tr>
+			    <tr>
+				<td>纪录片：</td>
+				<td>纪录片相关。</td>
 			</tr>
 			<tr>
 				<td>房产：</td>
 				<td>卖房子的或者房价。</td>
 			</tr>
+			  <tr>
+				<td>搞笑：</td>
+				<td>搞笑的东西。</td>
+			</tr>
+		  <tr>
+				<td>广告创意：</td>
+				<td>广告或者创意。</td>
+			</tr>
+			  
 			<tr>
 				<td>健康：</td>
 				<td>药名，或者常见疾病（罕见的病不算）。</td>
@@ -61,6 +141,10 @@
 			<tr>
 				<td>旅游：</td>
 				<td>旅游景点</td>
+			</tr>
+			    <tr>
+				<td>美女：</td>
+				<td>就是美女相关的。</td>
 			</tr>
 			<tr>
 				<td>美食：</td>
