--- a/index.html
+++ b/index.html
@@ -23,57 +23,6 @@
 		  <b>常见分类：</b><br><br>
 		  <table border="1px" cellspacing="0">
 			  <tr>
-				  <td>壁纸头像</td>
-				  <td>财经</td>
-				  <td>宠物</td>
-				  <td>电视剧</td>
-				  <td>电影</td>
-				  <td>动漫</td>
-				  <td>房产</td>
-				  <td>搞笑</td>
-				  </tr>
-			  <tr>
-				  <td>广告创意</td>
-				  <td>纪录片</td>
-				  <td>健康</td>
-				  <td>教育</td>
-				  <td>军事</td>
-				  <td>科技</td>
-				  <td>科学</td>
-				  <td>历史</td>
-				</tr>
-			  <tr>
-				  <td>旅游</td>
-				  <td>美女</td>
-				  <td>美食</td>
-				  <td>其他</td>
-				  <td>情感</td>
-				  <td>曲艺</td>
-				  <td>三农</td>
-				  <td>摄影</td>
-				  </tr>
-			  <tr>
-				  <td>社会</td>
-				  <td>生活</td>
-				  <td>时尚</td>
-				  <td>时事</td>
-				  <td>体育</td>
-				  <td>天气文章过滤</td>
-				  <td>网红达人</td>
-				  <td>文化</td>
-				  </tr>
-			  <tr>
-				  <td>心灵鸡汤</td>
-				  <td>星座命理</td>
-				  <td>音乐</td>
-				  <td>游戏</td>
-				  <td>娱乐</td>
-				  <td>职场</td>
-				  <td>综艺/td>
-				  <td>小说</td>
-				  <td>汽车</td>  
-			  </tr>
-			  <tr>
 				<td>壁纸头像</td>
 				<td>壁纸头像</td>
 			</tr>
@@ -207,5 +156,47 @@
 				<td>综艺节目名</td>
 			</tr>
 		  </table>
+壁纸头像 <br>               
+财经<br>
+宠物<br>
+电视剧<br>
+电影<br>
+动漫<br>
+房产<br>
+搞笑<br>
+广告创意<br>
+纪录片<br>
+健康<br>
+教育<br>
+军事<br>
+科技<br>
+科学<br>
+历史<br>
+旅游<br>
+美女<br>
+美食<br>
+其他<br>
+情感<br>
+曲艺<br>
+三农<br>
+摄影<br>
+社会<br>
+生活<br>
+时尚<br>
+时事<br>
+体育<br>
+天气文章过滤<br>
+网红达人<br>
+文化<br>
+ 心灵鸡汤<br>
+星座命理<br>
+ 音乐<br>
+游戏<br>
+娱乐<br>
+娱乐<br>
+职场<br>
+综艺<br>
+ 小说<br>
+汽车<br>
 	</body>
 </html>
