--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		  <b>植物：</b>玉米水稻小麦大豆等这些分类三农，其他的动植物分类其他。<br>
 		  <hr >
 		  <b>常见分类：</b><br><br>
+		<div style="float:left">
 		  <table border="1px" cellspacing="0">
 			  <tr>
 				<td>壁纸头像</td>
@@ -156,6 +157,8 @@
 				<td>综艺节目名</td>
 			</tr>
 		  </table>
+						</div>
+		<div style="float:right">
 壁纸头像 <br>               
 财经<br>
 宠物<br>
@@ -198,5 +201,7 @@
 综艺<br>
  小说<br>
 汽车<br>
+			</div>
+
 	</body>
 </html>
