--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			</tr>
 		  </table>
 						</div>
-		<div style="float:right">
+		<div style="float:left">
 壁纸头像 <br>               
 财经<br>
 宠物<br>
